--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -27,4 +27,133 @@ devtools::install_github("nicholasjclark/mvgam")
 ## Brief Overview
 
 We can explore the model’s primary functions using a test dataset that
-is available with all `R` installations.
+is available with all `R` installations. We introduce dynamic Generalised Additive Models and some of the key utility functions provided in `mvgam`. First, load the `lynx` data and plot the series as well as its estimated autocorrelation function
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+library(mvgam)
+data(lynx)
+lynx_full = data.frame(year = 1821:1934, 
+                       population = as.numeric(lynx))
+plot(lynx_full$population, type = 'l', ylab = 'Lynx trappings',
+     xlab = 'Time')
+acf(lynx_full$population, main = '')
+```
+
+There is a clear ~19-year cyclic pattern to the data, so create a `season` term that can be used to model this effect and give a better representation of the data generating process than we would likely get with a linear model
+```{r, fig.width = 5, fig.height = 4, fig.align='center'}
+plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'))
+lynx_full$season <- (lynx_full$year %%19) + 1
+```
+
+For `mvgam` models, the response needs to be labelled `y` and we also need an indicator of the series name as a `factor` variable
+```{r}
+lynx_full$y <- lynx_full$population
+lynx_full$series <- factor('series1')
+```
+
+Split the data into training (first 50 years) and testing (next 10 years of data) to evaluate multi-step ahead forecasts
+```{r}
+lynx_train = lynx_full[1:50, ]
+lynx_test = lynx_full[51:60, ]
+```
+
+Now fit an `mvgam` model; it fits a GAM in which a smooth function for `season` is estimated jointly with a full time series model for the errors (in this case an `AR1` process with drift), rather than relying on smoothing splines that do not incorporate a concept of the future. We estimate the model in `JAGS` using MCMC sampling (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
+```{r}
+lynx_mvgam <- mvjagam(data_train = lynx_train,
+               data_test = lynx_test,
+               formula = y ~ s(season, bs = 'cc', k = 10),
+               knots = list(season = c(0.5, 19.5)),
+               family = 'poisson',
+               trend_model = 'AR1',
+               n.burnin = 20000,
+               n.iter = 10000,
+               thin = 10,
+               auto_update = F)
+```
+
+Calculate the out of sample forecast from the fitted `mvgam` model and visualise 95% and 68% credible intervals
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+fits <- MCMCvis::MCMCchains(lynx_mvgam$jags_output, 'ypred')
+fits <- fits[,(NROW(lynx_mvgam$obs_data)+1):(NROW(lynx_mvgam$obs_data)+10)]
+cred_ints <- apply(fits, 2, function(x) hpd(x, 0.95))
+plot(cred_ints[3,] ~ seq(1:NCOL(cred_ints)), type = 'l',
+     col = rgb(1,0,0, alpha = 0),
+     ylim = c(0, max(lynx_full$population) * 1.25),
+     ylab = '',
+     xlab = 'Forecast horizon',
+     main = 'mvgam')
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 100), border = NA)
+cred_ints <- apply(fits, 2, function(x) hpd(x, 0.68))
+polygon(c(seq(1:(NCOL(cred_ints))), rev(seq(1:NCOL(cred_ints)))),
+        c(cred_ints[1,],rev(cred_ints[3,])),
+        col = rgb(150, 0, 0, max = 255, alpha = 180), border = NA)
+lines(cred_ints[2,], col = rgb(150, 0, 0, max = 255), lwd = 2, lty = 'dashed')
+points(lynx_test$population[1:10], pch = 16)
+lines(lynx_test$population[1:10])
+```
+
+All out of sample observations falling within the model's 95% credible intervals. Have a look at this model's summary to see what is being estimated (note that longer MCMC runs would probably be needed to increase effective sample sizes)
+```{r}
+summary_mvgam(lynx_mvgam)
+```
+
+Inspect the model's estimated smooth for the 19-year cyclic pattern. Note that the `mvgam` smooth plot is on a different scale compared to `mgcv` plots, but interpretation is similar
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_smooth(lynx_mvgam, 1, 'season')
+```
+
+We can also view the mvgam's posterior predictions for the entire series (testing and training)
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_fc(lynx_mvgam, data_test = lynx_test)
+```
+
+And the estimated latent trend component
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_trend(lynx_mvgam, data_test = lynx_test)
+```
+
+A key aspect of ecological forecasting is to understand [how different components of a model contribute to forecast uncertainty](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/eap.1589). We can estimate contributions to forecast uncertainty for the GAM smooth functions and the latent trend using `mvgam`
+```{r, fig.width=5, fig.height=4, fig.align='center'}
+plot_mvgam_uncertainty(lynx_mvgam, data_test = lynx_test)
+```
+
+Clearly the trend dominates the forecast uncertainty, which is not unexpected as this is the stochastic component of the model. There may be some long-term cyclicity in the trend based on the trend plot above, so perhaps another cyclic smooth term could be useful in the GAM linear predictor. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
+```{r, fig.width=6, fig.height=6, fig.align='center'}
+plot_mvgam_resids(lynx_mvgam)
+```
+
+Another useful utility of `mvgam` is the ability to use rolling window forecasts to evaluate competing models that may represent different hypotheses about the series dynamics. Here we will fit a poorly specified model to showcase how this evaluation works
+```{r}
+lynx_mvgam_poor <- mvjagam(data_train = lynx_train,
+               data_test = lynx_test,
+               formula = y ~ s(season, bs = 'gp', k = 3),
+               family = 'poisson',
+               trend_model = 'RW',
+               n.burnin = 10000,
+               n.iter = 5000,
+               thin = 5,
+               auto_update = F)
+
+```
+
+We choose a set of timepoints within the training data to forecast from, allowing us to simulate a situation where the model's parameters had already been estimated but we have only observed data up to the evaluation timepoint and would like to generate forecasts from the latent trends. Here we use year 10 as our last observation and forecast ahead for the next 10 years.
+```{r}
+mod1_eval <- eval_mvgam(lynx_mvgam, eval_timepoint = 10, fc_horizon = 10)
+mod2_eval <- eval_mvgam(lynx_mvgam_poor, eval_timepoint = 10, fc_horizon = 10)
+```
+
+Summary statistics of the two models' out of sample Discrete Rank Probability Score (DRPS) indicate that the well-specified model performs markedly better (far lower DRPS) for this evaluation timepoint
+```{r}
+summary(mod1_eval$series1$drps)
+summary(mod2_eval$series1$drps)
+```
+
+Nominal coverages for both models' 90% prediction intervals
+```{r}
+mean(mod1_eval$series1$in_interval)
+mean(mod2_eval$series1$in_interval)
+```
+
+The `compare_mvgams` function automates this process by rolling along a set of timepoints for each model, ensuring a more in-depth evaluation of each competing model at the same set of timepoints. There are many more extended uses for `mvgam` models, including the ability to fit dynamic factor processes for analysing and forecasting sets of multivariate discrete time series
+
