update readme and vignette

--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -56,14 +56,14 @@ lynx_train = lynx_full[1:50, ]
 lynx_test = lynx_full[51:60, ]
 ```
 
-Now fit an `mvgam` model; it fits a GAM in which a smooth function for `season` is estimated jointly with a full time series model for the errors (in this case an `AR1` process with drift), rather than relying on smoothing splines that do not incorporate a concept of the future. We estimate the model in `JAGS` using MCMC sampling (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
+Now fit an `mvgam` model; it fits a GAM in which a smooth function for `season` is estimated jointly with a full time series model for the errors (in this case an `AR3` process with drift), rather than relying on smoothing splines that do not incorporate a concept of the future. We estimate the model in `JAGS` using MCMC sampling (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
 ```{r}
 lynx_mvgam <- mvjagam(data_train = lynx_train,
                data_test = lynx_test,
-               formula = y ~ s(season, bs = 'cc', k = 10),
+               formula = y ~ s(season, bs = 'cc', k = 19),
                knots = list(season = c(0.5, 19.5)),
                family = 'poisson',
-               trend_model = 'AR1',
+               trend_model = 'AR3',
                n.burnin = 20000,
                n.iter = 10000,
                thin = 10,
@@ -118,7 +118,7 @@ A key aspect of ecological forecasting is to understand [how different component
 plot_mvgam_uncertainty(lynx_mvgam, data_test = lynx_test)
 ```
 
-Clearly the trend dominates the forecast uncertainty, which is not unexpected as this is the stochastic component of the model. There may be some long-term cyclicity in the trend based on the trend plot above, so perhaps another cyclic smooth term could be useful in the GAM linear predictor. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
+Both components contribute to forecast uncertainty, suggesting we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
 ```{r, fig.width=6, fig.height=6, fig.align='center'}
 plot_mvgam_resids(lynx_mvgam)
 ```
