--- a/vignettes/Introduction_to_mvgam.Rmd
+++ b/vignettes/Introduction_to_mvgam.Rmd
@@ -23,11 +23,17 @@ plot(lynx_full$population, type = 'l', ylab = 'Lynx trappings',
 acf(lynx_full$population, main = '')
 ```
 
-There is a clear ~19-year cyclic pattern to the data, so I create a `season` term that can be used to model this effect and give a better representation of the data generating process. I also put the year term on a more manageable scale
+There is a clear ~19-year cyclic pattern to the data, so I create a `season` term that can be used to model this effect and give a better representation of the data generating process. I also create a new `year` term that represents which long-term cycle each observation is in
 ```{r, fig.width = 5, fig.height = 4, fig.align='center'}
 plot(stl(ts(lynx_full$population, frequency = 19), s.window = 'periodic'))
 lynx_full$season <- (lynx_full$year %%19) + 1
-lynx_full$year <- lynx_full$year - 1820
+cycle_ends <- c(which(lynx_full$season == 19), NROW(lynx_full))
+cycle_starts <- c(1, cycle_ends[1:length(which(lynx_full$season == 19))] + 1)
+cycle <- vector(length = NROW(lynx_full))
+for(i in 1:length(cycle_starts)){
+  cycle[cycle_starts[i]:cycle_ends[i]] <- i
+}
+lynx_full$year <- cycle
 ```
 
 Add lag indicators needed to fit the nonlinear lag models that gave the best one step ahead point forecasts in the ESA workshop example. As in the example, we specify the `default` argument in the `lag` function as the mean log population.
@@ -57,8 +63,8 @@ lynx_test = lynx_full[51:60, ]
 
 The best-forecasting model in the course was with nonlinear smooths of lags 1 and 2; we use those here is that we also include a cyclic smooth for the 19-year cycles as this seems like an important feature, as well as a yearly smooth for the long-term trend with penalty on the first derivative to prevent linear extrapolation into the future
 ```{r}
-lynx_mgcv = gam(population ~ s(season, bs = 'cc', k = 10) +
-                 s(year, k = 5, m = 1) + s(lag1, k = 5) +
+lynx_mgcv = gam(population ~ s(season, bs = 'cc', k = 19) +
+                 s(year, k = 3, m = 1) + s(lag1, k = 5) +
                   s(lag2, k = 5),
                knots = list(season = c(0.5, 19.5)),
                 data = lynx_train, family = "poisson",
@@ -123,7 +129,7 @@ for(i in 1:200){
 }
 ```
 
-Plot the mgcv model's out of sample forecast for the next 8 years ahead
+Plot the mgcv model's out of sample forecast for the next 10 years ahead
 ```{r, fig.width=5, fig.height=4, fig.align='center'}
 cred_ints <- apply(gam_sims, 2, function(x) hpd(x, 0.95))
 yupper <- max(lynx_full$population) * 1.25
@@ -145,14 +151,14 @@ points(lynx_test$population[1:10], pch = 16)
 lines(lynx_test$population[1:10])
 ```
 
-A decent forecast? The shape is certainly correct, but the 95% uncertainty intervals are far too narrow due to the interpolation of the precisely estimated lag smooth functions and the flat extrapolation of the yearly smooth. Now fit an `mvgam` model; it fits a similar model to the above but with a full time series model for the errors, rather than smoothing splines that do not incorporate a concept of the future. We also exclude the `year` term to reduce any possible extrapolation and because latent trend model will capture this temporal variation. We estimate the model in `JAGS` using MCMC sampling (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
+A decent forecast? The shape is certainly correct, but the 95% uncertainty intervals are far too narrow due to the interpolation of the precisely estimated lag smooth functions and the flat extrapolation of the yearly smooth. Now fit an `mvgam` model; it fits a similar model to the above but with a full time series model for the errors (in this case an `AR3` process), rather than smoothing splines that do not incorporate a concept of the future. We also exclude the `year` term to reduce any possible extrapolation and because latent trend model will capture this temporal variation. We estimate the model in `JAGS` using MCMC sampling (Note that `JAGS` 4.3.0 is required; installation links are found [here](https://sourceforge.net/projects/mcmc-jags/files/))
 ```{r}
 lynx_mvgam <- mvjagam(data_train = lynx_train,
                data_test = lynx_test,
-               formula = y ~ s(season, bs = 'cc', k = 10),
+               formula = y ~ s(season, bs = 'cc', k = 19),
                knots = list(season = c(0.5, 19.5)),
                family = 'poisson',
-               trend_model = 'AR1',
+               trend_model = 'AR3',
                n.burnin = 10000,
                n.iter = 5000,
                thin = 5,
@@ -187,7 +193,7 @@ The `mvgam` has much more realistic uncertainty than the `mgcv` version, with al
 summary_mvgam(lynx_mvgam)
 ```
 
-Now inspect each model's estimated smooth for the 19-year cyclic pattern. Note that the `mvgam` smooth plot is on a different scale compared to the `mgcv` plot, but interpretation is similar
+Now inspect each model's estimated smooth for the 19-year cyclic pattern. Note that the `mvgam` smooth plot is on a different scale compared to the `mgcv` plot, but interpretation is similar. The `mgcv` smooth is much wigglier, likely because it is compensating for the any remaining autocorrelation not captured by the lag smooths. We could probably remedy this by reducing `k` in the seasonal smooth for the `mgcv` model (in practice this works well, but leaving `k` larger for the `mvgam`'s seasonal smooth is recommended as our experience is that this tends to lead to better performance and convergence)
 ```{r, fig.show='hold', fig.align='center'}
 plot(lynx_mgcv, select=1, shade=T)
 plot_mvgam_smooth(lynx_mvgam, 1, 'season')
@@ -208,7 +214,7 @@ A key aspect of ecological forecasting is to understand [how different component
 plot_mvgam_uncertainty(lynx_mvgam, data_test = lynx_test)
 ```
 
-Clearly the trend dominates the forecast uncertainty, which is not unexpected as this is the stochastic component of the model. There may be some long-term cyclicity in the trend based on the trend plot above, so perhaps another cyclic smooth term could be useful in the GAM linear predictor. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
+Both components contribute to forecast uncertainty, suggesting we would still need some more work to learn about factors driving the dynamics of the system. But we will leave the model as-is for this example. Diagnostics of the model can also be performed using `mvgam`. Have a look at the model's residuals, which are posterior medians of Dunn-Smyth randomised quantile residuals so should follow approximate normality. We are primarily looking for a lack of autocorrelation, which would suggest our AR2 model is appropriate for the latent trend
 ```{r, fig.width=6, fig.height=6, fig.align='center'}
 plot_mvgam_resids(lynx_mvgam)
 ```
