--- a/docs/README.Rmd
+++ b/docs/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 *mvgam*
 ================
 
-The goal of `mvgam` is to use a Bayesian framework to estimate parameters of Generalised Additive Models for discrete time series with dynamic trend components. 
+The goal of `mvgam` is to use a Bayesian framework to estimate parameters of Generalised Additive Models for discrete time series with dynamic trend components.
   
 ## Installation
 Install the development version from `GitHub` using:
@@ -24,7 +24,7 @@ Install the development version from `GitHub` using:
 # install.packages("devtools")
 devtools::install_github("nicholasjclark/mvgam")
 ```
-## Brief Overview
+## Brief introduction to the package
 
 We can explore the model’s primary functions using a test dataset that
 is available with all `R` installations. We introduce dynamic Generalised Additive Models and some of the key utility functions provided in `mvgam`. First, load the `lynx` data and plot the series as well as its estimated autocorrelation function
